# sayonara

./: Cargo.toml  README.md
.github/workflows/: schedule-delete.yml
src/: main.rs
