[package]
edition = "2021"
name = "sayonara"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
dotenv = "0.15.0"
egg-mode = "0.16.0"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = "0.11.13"
tokio = {version = "1.20.1", features = ["full"]}
